fix up navbar-icon and expand/collapse used when screen is too narrow with lots of help from Jake

--- a/_includes/css/default.css
+++ b/_includes/css/default.css
@@ -55,3 +55,10 @@ cite {
         color: white;
 }
 
+.icon-bar {
+    display: block;
+    background-color: white;
+    width: 20px;
+    height: 3px;
+    margin: 3px;
+}
